Added filters with order date and order status